[gd_scene load_steps=33 format=2]

[ext_resource path="res://art/explode/explode 01.png" type="Texture" id=1]
[ext_resource path="res://art/explode/explode 08.png" type="Texture" id=2]
[ext_resource path="res://art/explode/explode 03.png" type="Texture" id=3]
[ext_resource path="res://art/explode/explode 04.png" type="Texture" id=4]
[ext_resource path="res://art/explode/explode 06.png" type="Texture" id=5]
[ext_resource path="res://art/explode/explode 07.png" type="Texture" id=6]
[ext_resource path="res://art/explode/explode 09.png" type="Texture" id=7]
[ext_resource path="res://art/explode/explode 10.png" type="Texture" id=8]
[ext_resource path="res://art/explode/explode 02.png" type="Texture" id=9]
[ext_resource path="res://art/explode/explode 05.png" type="Texture" id=10]
[ext_resource path="res://art/missile.png" type="Texture" id=11]
[ext_resource path="res://art/explode/explode 11.png" type="Texture" id=12]
[ext_resource path="res://art/explode/explode 12.png" type="Texture" id=13]
[ext_resource path="res://art/explode/explode 00.png" type="Texture" id=14]
[ext_resource path="res://art/missile_1.png" type="Texture" id=15]
[ext_resource path="res://art/explode/explode 13.png" type="Texture" id=16]
[ext_resource path="res://art/explode/explode 24.png" type="Texture" id=17]
[ext_resource path="res://art/explode/explode 22.png" type="Texture" id=18]
[ext_resource path="res://art/explode/explode 23.png" type="Texture" id=19]
[ext_resource path="res://art/explode/explode 21.png" type="Texture" id=20]
[ext_resource path="res://art/explode/explode 18.png" type="Texture" id=21]
[ext_resource path="res://art/explode/explode 19.png" type="Texture" id=22]
[ext_resource path="res://art/explode/explode 17.png" type="Texture" id=23]
[ext_resource path="res://art/explode/explode 20.png" type="Texture" id=24]
[ext_resource path="res://art/explode/explode 15.png" type="Texture" id=25]
[ext_resource path="res://art/explode/explode 14.png" type="Texture" id=26]
[ext_resource path="res://art/explode/explode 16.png" type="Texture" id=27]
[ext_resource path="res://scripts/Missile.gd" type="Script" id=28]
[ext_resource path="res://scripts/labelHolder.gd" type="Script" id=29]
[ext_resource path="res://fonts/BerlinDemi.tres" type="DynamicFont" id=30]

[sub_resource type="CapsuleShape2D" id=1]
height = 26.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 1 ), ExtResource( 9 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 16 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 27 ), ExtResource( 23 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 24 ), ExtResource( 20 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 17 ) ],
"loop": false,
"name": "explode",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 15 ) ],
"loop": true,
"name": "fly",
"speed": 5.0
} ]

[node name="Missile" type="RigidBody2D"]
collision_layer = 2
input_pickable = true
mass = 0.00102041
gravity_scale = 0.2
contacts_reported = 2
contact_monitor = true
linear_damp = 5.0
script = ExtResource( 28 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = 3.14159
scale = Vector2( 0.023, 0.023 )
frames = SubResource( 2 )
animation = "fly"

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="labelHolder" type="Node2D" parent="."]
position = Vector2( 3, 0 )
script = ExtResource( 29 )

[node name="lblQuery" type="Label" parent="labelHolder"]
margin_left = 14.0
margin_top = -3.0
margin_right = 83.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 30 )
uppercase = true
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="body_entered" from="." to="." method="_on_Missile_body_entered"]
[connection signal="input_event" from="." to="." method="_on_Missile_input_event"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
